<resources>
    <string name="app_name">Scrawl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scrawl</string>
    <string name="nav_header_subtitle">A Simple Notepad App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="input_title_here">Input title here…</string>
    <string name="add_label">Add label</string>
    <string name="may_22_2018">May 22, 2018</string>
    <string name="input_note_here">Input note here…</string>
    <string name="save">Save</string>

    <string name="content">Note to store.</string>
    <string name="input_link_here">Input link here…</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign-in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
...
