...
            android:text="@string/register" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_to_login"
            android:id="@+id/register_to_login_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="@color/cardview_dark_background" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
...
