...
                android:choiceMode="singleChoice"
                android:divider="#000000"
                android:longClickable="true"
                tools:listitem="@layout/nav_item" />

            <LinearLayout
                android:id="@+id/nav_lout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/nav_logout_image"
...
