...

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/activity_viewnotescontent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/cog"
        android:onClick=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
...
                    android:theme="@style/NormalButtonTheme"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical|center_horizontal|start"
                    android:text="Edit Note" />

                <Button
                    android:id="@+id/btn_collaborate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_people_black_24dp"
                    android:drawablePadding="8dp"
                    android:theme="@style/NormalButtonTheme"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical|center_horizontal|start"
                    android:text="Collaborate"/>

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_share_black_24dp"
                    android:drawablePadding="8dp"
                    android:theme="@style/NormalButtonTheme"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical|center_horizontal|start"
                    android:text="Share Note" />

                <Button
                    android:id="@+id/btn_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_delete_black_24dp"
                    android:drawablePadding="8dp"
                    android:layout_marginBottom="10dp"
                    android:theme="@style/DeleteButtonTheme"
...
